--- a/src/package.json
+++ b/src/package.json
@@ -3,19 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "devDependencies": {
-    "gulp": "3.9.1",
-    "gulp-concat": "2.6.0",
-    "gulp-cssmin": "0.1.7",
-    "gulp-uglify": "1.5.3",
-    "rimraf": "2.5.2",
+    "@types/node": "0.0.2",
+    "css-loader": "^0.26.1",
+    "node-sass": "^3.13.1",
+    "sass-loader": "^4.0.2",
     "source-map-loader": "^0.1.5",
+    "style-loader": "^0.13.1",
     "ts-loader": "^1.3.2",
     "typescript": "^2.1.4",
     "webpack": "^1.14.0"
   },
   "dependencies": {
+    "@types/bootstrap": "^3.3.32",
+    "@types/jquery": "^2.0.34",
     "@types/react": "^0.14.55",
     "@types/react-dom": "^0.14.19",
+    "bootstrap-sass": "^3.3.7",
+    "jquery": "^3.1.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   }
