web.config directory browse

--- a/src/project.json
+++ b/src/project.json
@@ -39,7 +39,8 @@
     "include": [
       "wwwroot",
       "**/*.cshtml",
-      "appsettings.json"
+      "appsettings.json",
+      "web.config"
     ]
   },
 
