--- a/src/project.json
+++ b/src/project.json
@@ -13,6 +13,7 @@
     "Microsoft.Extensions.Configuration.Json": "1.0.0",
     "Microsoft.Extensions.Logging": "1.0.0",
     "Microsoft.Extensions.Logging.Console": "1.0.0",
+    "Serilog.Extensions.Logging.File": "1.0.0",
     "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0"
   },
 
