Adding publish-iis

--- a/src/project.json
+++ b/src/project.json
@@ -47,7 +47,8 @@
   },
 
   "scripts": {
-    "prepublish": ["npm install","node node_modules/webpack/bin/webpack.js"]
+    "prepublish": ["npm install","node node_modules/webpack/bin/webpack.js"],
+    "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
   },
 
   "tools":{
